# MULTITHREADING

./: Makefile  README.md  makefile  msg.cpp
1CommonAlgorithms/parseAndCalculateProizvodnuyu/: myAllocator.cpp  parseCalculateProizvodnaya.cpp  smart.cpp
1CommonAlgorithms/test/: test.cpp
2Sockets/chatMultiplexing/: MULTITHREAD.cpp
2Sockets/socketBerkly/: Chat_multiplexing.cpp  Epoll.cpp  Socket.cpp
3SignalsSIG/: sigchildAndZombie.cpp  sigignore.cpp
4Channels/fifo/: writer.cpp
4Channels/pipe/: bash.cpp
4Channels/socket/: sock.cpp
5IPC/msgList/: posixRcv.cpp
5IPC/semafor/: POSIXCreate.cpp  sysvCreate.cpp
5IPC/sharedMemory/: SysVCreate.cpp
6Threads/: Makefile  in.txt  lock.cpp  oml.cpp  parallelSort.cpp
7HTMLServer/: CMakeLists.txt  HTTPServer.cpp  MULTITHREAD.cpp  Makefile  help.txt  server.cpp  serverM.cpp
7HTMLServer/link/: final.txt
Channels/FIFO/: fifo.cpp  writer.cpp
Threads/: block.cpp  locks.cpp
mThread/: POSIXThreadJoin.cpp
msgList/: Makefile  SysVrcv.cpp  SysVsnd.cpp  SysVsndNonBlock.cpp  posixRcv.cpp  posixSend.cpp
semafor/: POSIXCreate.cpp  sysvCreate.cpp
sharedMemory/: POSIXCreate.cpp
